# mlops66_Financial-Fraud-Detection

./: .coverage  .dvcignore  .gitignore  Dockerfile  Dockerfile.train  LICENSE  README.md  bentoml_service.py  checkpoints.dvc  data.dvc  dataset_statistics.md  docker-entrypoint.sh  export_onnx.py  main.py  onnx_api.py  predict.py  preprocess.py  profile_training.py  pyproject.toml  requirements.txt  requirements_test.txt  requirements_tests.txt  ruff.toml  tabnet_fraud_model.onnx.dvc  tabnet_fraud_model.zip.dvc  train.py  train_entrypoint.sh  vertex_train.py
.dvc/: config
.github/workflows/: DVC_workflow.yaml  api_tests.yaml  ci-cd.yaml  ci.yaml  codecheck.yaml  deploy_cloudrun.yaml  lint.yaml  retrain.yaml  tests.yaml
api/: __init__.py  drift_api.py  main.py  new_main.py  schemas.py
api/frontend/: index.html
configs/: config.yaml  sweep.yaml
configs/model/: tabnet.yaml
configs/training/: default.yaml
docs/: PROJECT_UPDATE_REPORT.md  monitoring.md
infra/: alert_policy.json
reports/: README.md  report.py
reports/figures/: __init__.py  billing.csv
src/: __init__.py
src/config/: __init__.py  settings.py
src/data/: __init__.py  dataset_statistics.py  loader.py
src/evaluation/: __init__.py  drift_check.py  metrics.py  uncertainty.py
src/features/: __init__.py  encoders.py  (+2 more)
tests/: __init__.py  conftest.py  test_callbacks.py  test_data.py  test_encoders.py  test_helpers.py  test_loader.py  test_metrics.py  test_model.py  test_preprocessor.py  test_settings.py  test_tabnet_trainer.py  test_test.py  test_time_features.py  test_uncertainty.py
(+12 files in other folders)
